--- a/client/src/components/TimeDashboard/TimeDashboard.css
+++ b/client/src/components/TimeDashboard/TimeDashboard.css
@@ -1,5 +1,10 @@
 .time-db-container {
     width: 50%;
-    height: 100%;
-    border: 3px solid red;
+    height: 80vh;
+    background-color: rgb(241, 239, 235);
 }
+
+.time-db-content {
+    width: 80%;
+    margin: 0 auto;
+};
